--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,16 +1,21 @@
 {
 "name": "Googly Eyes",
-	"version": "0.01",
+	"version": "0.1",
 	"manifest_version": 2,
 	"description": "Add silly googly eyes to web pages",
-	//"icons": { "16": "images/icon16.png",
-	//             "48": "images/icon48.png",
-	//            "128": "images/icon128.png" },
-	//"background": {
-	//	"scripts": ["count.js"]
-	//},
-	//"offline_enabled": true,
-	//"permissions" : [
-	//	"contextMenus", "tabs", "http://*/*", "https://*/*"
-	//]
+	"background": {
+		"scripts": ["background.js"]
+	},
+	"browser_action": {
+		"name": "Add eyes to page!",
+		"default_icon": "small_icon.png",
+		"icons": [
+			"small_icon.png"
+			]
+	},
+	"permissions" : [
+		"tabs",
+		"http://*/*", 
+		"https://*/*"
+	]
 }
