Extension working, with proper js/css injection and compilation  * A build script was added to /build_extension.sh  * Background js now injects the js and css properly when the extension * button is pushed  * SASS now compiles all css into a single script  * Closure used to compile js with libraries It's getting there! Load the unpacked extension folder from chrome://extensions

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,7 @@
 	"manifest_version": 2,
 	"description": "Add silly googly eyes to web pages",
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["js/background.js"]
 	},
 	"browser_action": {
 		"name": "Add eyes to page!",
