--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,5 +18,8 @@
 		"storage",
 		"http://*/*", 
 		"https://*/*"
+	],
+	"web_accessible_resources": [
+		"css/images/ui-icons_222222_256x240.png"
 	]
 }
