--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ extension/css/chrome-bootstrap.css
 extension/js/jquery-1.8.3.js
 extension/js/options.js
 extension/*
+js/background.js
+js/googly.js
