--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ extension/css/chrome-bootstrap.css
 extension/js/jquery-1.8.3.js
 extension/js/options.js
 extension/*
-js/background.js
-js/googly.js
 *.bak
+scripts/app/*/*.js
+/scripts/app.js
+/scripts/background.js
